--- a/index.html
+++ b/index.html
@@ -146,18 +146,8 @@
             <h2>Recently Updated</h2>
             <ul class="recent-list">
                 <li class="recent-item">
-                    <a href="Resources/FY-Sem2-Linux/">New Linux tutorial added</a>
-                    <span class="date">Updated 2 days ago</span>
-                </li>
-                <li class="recent-item">
-                    <a href="Resources/-PIC/">PIC microcontroller guide updated</a>
-                    <span class="date">Updated 1 week ago</span>
-                </li>
-                <li class="recent-item">
-                    <a href="Resources/BEEE/">BEEE notes revised</a>
-                    <span class="date">Updated 3 days ago</span>
-                </li>
-            </ul>
+                    <a href="Resources/FY-Sem2-Linux/">Linux Practical 1 - Installation - Images</a>
+                    <span class="date">Updated on 17/12/25</span>
         </div>
         <div class="section">
             <h2>All Resources</h2>
