--- a/index.html
+++ b/index.html
@@ -152,16 +152,16 @@
         <div class="section">
             <h2>All Resources</h2>
             <div class="resources" id="resourceList">
-                <div class="resource-item" data-name="FY-Sem2-Linux">
-                    <a href="Resources/FY-Sem2-Linux/">FY-Sem2-Linux</a>
+                <div class="resource-item" data-name="FY Sem2 Linux (IOT)">
+                    <a href="Resources/FY-Sem2-Linux/">FY-Sem2-Linux (IOT)</a>
                 </div>
-                <div class="resource-item" data-name="-PIC">
-                    <a href="Resources/-PIC/">-PIC</a>
+                <div class="resource-item" data-name="FY SEM2 IOT PIC">
+                    <a href="Resources/-PIC/">FYSEM2IOT-PIC</a>
                 </div>
-                <div class="resource-item" data-name="BEEE">
-                    <a href="Resources/BEEE/">BEEE</a>
+                <div class="resource-item" data-name="FY SEM2 IOT BEEE">
+                    <a href="Resources/BEEE/">FYSEM2IOTBEEE</a>
                 </div>
-                <div class="resource-item" data-name="A.Maths">
+                <div class="resource-item" data-name="FY Sem2 IOT A.Maths">
                     <a href="Resources/A.Maths/">A.Maths</a>
                 </div>
             </div>
