Added Correct Anchors

--- a/index.html
+++ b/index.html
@@ -146,23 +146,23 @@
             <h2>Recently Updated</h2>
             <ul class="recent-list">
                 <li class="recent-item">
-                    <a href="Resources/FY-Sem2-Linux/">Linux Practical 1 - Installation - Images</a>
+                    <a href="Resources/FY-Sem2-IOTA-Linux/Linux-installation-fyiot-sem2.pdf">Linux Practical 1 - Installation - Images</a>
                     <span class="date">Updated on 17/12/25</span>
         </div>
         <div class="section">
             <h2>All Resources</h2>
             <div class="resources" id="resourceList">
                 <div class="resource-item" data-name="FY Sem2 Linux (IOT)">
-                    <a href="Resources/FY-Sem2-Linux/">FY-Sem2-Linux (IOT)</a>
+                    <a href="Resources/FY-Sem2-IOTA-Linux/">FY-Sem2-Linux (IOT)</a>
                 </div>
                 <div class="resource-item" data-name="FY SEM2 IOT PIC">
-                    <a href="Resources/-PIC/">FYSEM2IOT-PIC</a>
+                    <a href="Resources/FY-SEM2-PIC (IOT)/">FY SEM 2 IOT - PIC</a>
                 </div>
                 <div class="resource-item" data-name="FY SEM2 IOT BEEE">
-                    <a href="Resources/BEEE/">FYSEM2IOTBEEE</a>
+                    <a href="Resources/FY-SEM2-IOT-BEEE /">FY SEM2 IOT BEEE</a>
                 </div>
                 <div class="resource-item" data-name="FY Sem2 IOT A.Maths">
-                    <a href="Resources/A.Maths/">A.Maths</a>
+                    <a href="Resources/FY-SEM2-IOT-A.Maths/">FY SEM2 IOT A.Maths</a>
                 </div>
             </div>
         </div>
