--- a/Resources/index.html
+++ b/Resources/index.html
@@ -5,21 +5,182 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resources Directory</title>
     <style>
-        body { font-family: Arial, sans-serif; margin: 20px; }
-        ul { list-style-type: none; }
-        li { margin: 10px 0; }
-        a { text-decoration: none; color: #007bff; }
-        a:hover { text-decoration: underline; }
+        :root {
+            --primary-blue: #3498db;
+            --primary-yellow: #f1c40f;
+        }
+        body {
+            font-family: 'Helvetica Neue', Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f5f5f5;
+            color: #333;
+            line-height: 1.6;
+        }
+        header {
+            background-color: var(--primary-blue);
+            color: #fff;
+            text-align: center;
+            padding: 2rem 1rem;
+            position: relative;
+        }
+        header h1 {
+            margin: 0;
+            font-size: 2.5rem;
+        }
+        header p {
+            margin: 0.5rem 0 0;
+            font-size: 1.1rem;
+        }
+        .back-home {
+            position: absolute;
+            top: 1rem;
+            left: 1rem;
+            background-color: var(--primary-yellow);
+            color: var(--primary-blue);
+            padding: 0.5rem 1rem;
+            border-radius: 6px;
+            text-decoration: none;
+            font-weight: 600;
+            transition: all 0.3s ease;
+        }
+        .back-home:hover {
+            background-color: #fff;
+            transform: translateY(-2px);
+        }
+        .container {
+            max-width: 1000px;
+            margin: 0 auto;
+            padding: 2rem 1rem;
+        }
+        .search-container {
+            text-align: center;
+            margin: 2rem 0;
+        }
+        #search {
+            padding: 0.75rem 1rem;
+            width: 100%;
+            max-width: 400px;
+            font-size: 1rem;
+            border: 2px solid #bdc3c7;
+            border-radius: 6px;
+            outline: none;
+        }
+        #search:focus {
+            border-color: var(--primary-blue);
+        }
+        .section {
+            margin: 3rem 0;
+            background-color: #fff;
+            padding: 2rem;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+        }
+        .section h2 {
+            margin-top: 0;
+            margin-bottom: 1.5rem;
+            color: var(--primary-blue);
+            font-size: 1.8rem;
+            border-bottom: 2px solid var(--primary-yellow);
+            padding-bottom: 0.5rem;
+        }
+        .resources {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+            gap: 1.5rem;
+        }
+        .resource-item {
+            background-color: var(--primary-blue);
+            color: #fff;
+            padding: 1.5rem;
+            border-radius: 8px;
+            text-align: center;
+            transition: all 0.3s ease;
+            border: 2px solid var(--primary-blue);
+            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+            cursor: pointer;
+        }
+        .resource-item:hover {
+            background-color: var(--primary-yellow);
+            color: var(--primary-blue);
+            transform: translateY(-2px);
+            box-shadow: 0 6px 8px rgba(0,0,0,0.15);
+        }
+        .resource-item a {
+            text-decoration: none;
+            color: inherit;
+            font-weight: 600;
+            font-size: 1.1rem;
+            display: block;
+        }
+        footer {
+            background-color: var(--primary-blue);
+            color: #fff;
+            text-align: center;
+            padding: 1.5rem;
+            margin-top: 3rem;
+        }
+        @media (max-width: 768px) {
+            .container {
+                padding: 1rem;
+            }
+            .resources {
+                grid-template-columns: 1fr;
+            }
+            header h1 {
+                font-size: 2rem;
+            }
+        }
     </style>
 </head>
 <body>
-    <h1>Resources</h1>
-    <ul>
-        <li><a href="FY-Sem2-IOTA-Linux/">FY-Sem2-IOTA-Linux/</a></li>
-        <li><a href="FY-SEM2-PIC (IOT)/">FY-SEM2-PIC (IOT)/</a></li>
-        <li><a href="FY-SEM2-IOT-BEEE /">FY-SEM2-IOT-BEEE /</a></li>
-        <li><a href="FY-SEM2-IOT-A.Maths/">FY-SEM2-IOT-A.Maths/</a></li>
-    </ul>
+    <header>
+        <a href="../" class="back-home">← Back to Home</a>
+        <h1>Resources</h1>
+        <p>FY-SEM2 Course Materials</p>
+    </header>
+    <div class="container">
+        <div class="search-container">
+            <input type="text" id="search" placeholder="Search resources...">
+        </div>
+        <div class="section">
+            <h2>All Resources</h2>
+            <div class="resources" id="resourceList">
+                <div class="resource-item" data-name="FY Sem2 Linux (IOT)">
+                    <a href="FY-Sem2-IOTA-Linux/">FY-Sem2-Linux (IOT)</a>
+                </div>
+                <div class="resource-item" data-name="FY SEM2 IOT PIC">
+                    <a href="FY-SEM2-PIC (IOT)/">FY SEM 2 IOT - PIC</a>
+                </div>
+                <div class="resource-item" data-name="FY SEM2 IOT BEEE">
+                    <a href="FY-SEM2-IOT-BEEE /">FY SEM2 IOT BEEE</a>
+                </div>
+                <div class="resource-item" data-name="FY Sem2 IOT A.Maths">
+                    <a href="FY-SEM2-IOT-A.Maths/">FY SEM2 IOT A.Maths</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <footer>
+        <p>&copy; 2023 CWITFY. All rights reserved.</p>
+    </footer>
+    <script>
+        const searchInput = document.getElementById('search');
+        const resourceList = document.getElementById('resourceList');
+        const items = resourceList.getElementsByClassName('resource-item');
+
+        searchInput.addEventListener('input', function() {
+            const query = this.value.toLowerCase();
+            for (let item of items) {
+                const name = item.getAttribute('data-name').toLowerCase();
+                if (name.includes(query)) {
+                    item.style.display = '';
+                } else {
+                    item.style.display = 'none';
+                }
+            }
+        });
+    </script>
 </body>
 </html></content>
 </xai:function_call name="write">
