--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CWITFY Resources</title>
+    <link rel="icon" href="favicon.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Onest:wght@400;700&family=Pixelify+Sans:wght@400;700&display=swap" rel="stylesheet">
     <style>
         :root {
             --primary-blue: #3498db;
             --primary-yellow: #f1c40f;
         }
         body {
-            font-family: 'Helvetica Neue', Arial, sans-serif;
+            font-family: 'Onest', sans-serif;
             margin: 0;
             padding: 0;
             background-color: #f5f5f5;
@@ -26,6 +30,7 @@
         header h1 {
             margin: 0;
             font-size: 2.5rem;
+            font-family: 'Pixelify Sans', sans-serif;
         }
         header p {
             margin: 0.5rem 0 0;
@@ -141,7 +146,10 @@
 </head>
 <body>
     <header>
-        <h1>CWITFY Resources</h1>
+        <div style="display: flex; align-items: center; justify-content: center;">
+            <img src="favicon.png" alt="CWITFY Logo" style="height: 50px; margin-right: 10px;">
+            <h1>CWITFY Resources</h1>
+        </div>
         <p>Your resource hub for FY-SEM2</p>
     </header>
     <div class="container">
