--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Onest:wght@400;700&family=Pixelify+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Onest:wght@400;700&family=Pixelify+Sans:wght@400;700&family=Jersey+10:wght@400&display=swap" rel="stylesheet">
     <style>
         :root {
             --primary-blue: #3498db;
@@ -24,13 +24,16 @@
         header {
             background-color: var(--primary-blue);
             color: #fff;
-            text-align: center;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
             padding: 2rem 1rem;
         }
         header h1 {
             margin: 0;
             font-size: 2.5rem;
-            font-family: 'Pixelify Sans', sans-serif;
+            font-family: 'Jersey 10', sans-serif;
+            color: var(--primary-yellow);
         }
         header p {
             margin: 0.5rem 0 0;
@@ -146,7 +149,7 @@
 </head>
 <body>
     <header>
-        <div style="display: flex; align-items: center; justify-content: center;">
+        <div style="display: flex; align-items: center;">
             <img src="favicon.png" alt="CWITFY Logo" style="height: 50px; margin-right: 10px;">
             <h1>CWITFY Resources</h1>
         </div>
