--- a/Resources/FY-Sem2-IOTA-Linux/index.html
+++ b/Resources/FY-Sem2-IOTA-Linux/index.html
@@ -8,17 +8,30 @@
         :root {
             --primary-blue: #3498db;
             --primary-yellow: #f1c40f;
+            --bg-color: #f5f5f5;
+            --text-color: #333;
+            --header-bg: var(--primary-blue);
+            --section-bg: #fff;
+            --border-color: #ecf0f1;
+        }
+        [data-theme="dark"] {
+            --bg-color: #1a1a1a;
+            --text-color: #e0e0e0;
+            --header-bg: #2c3e50;
+            --section-bg: #2c2c2c;
+            --border-color: #444;
         }
         body {
             font-family: 'Helvetica Neue', Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f5f5f5;
-            color: #333;
+            background-color: var(--bg-color);
+            color: var(--text-color);
             line-height: 1.6;
+            transition: background-color 0.3s, color 0.3s;
         }
         header {
-            background-color: var(--primary-blue);
+            background-color: var(--header-bg);
             color: #fff;
             text-align: center;
             padding: 2rem 1rem;
@@ -37,16 +50,17 @@
             top: 1rem;
             left: 1rem;
             display: flex;
-            gap: 1rem;
+            gap: 0.5rem;
         }
         .nav-links a {
             background-color: var(--primary-yellow);
             color: var(--primary-blue);
-            padding: 0.5rem 1rem;
+            padding: 0.5rem;
             border-radius: 6px;
             text-decoration: none;
             font-weight: 600;
             transition: all 0.3s ease;
+            font-size: 1.2rem;
         }
         .nav-links a:hover {
             background-color: #fff;
@@ -58,10 +72,11 @@
             padding: 2rem 1rem;
         }
         .section {
-            background-color: #fff;
+            background-color: var(--section-bg);
             padding: 2rem;
             border-radius: 8px;
             box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            transition: background-color 0.3s;
         }
         .section h2 {
             margin-top: 0;
@@ -77,7 +92,7 @@
         }
         .resource-item {
             padding: 1.5rem;
-            border-bottom: 1px solid #ecf0f1;
+            border-bottom: 1px solid var(--border-color);
             display: flex;
             justify-content: space-between;
             align-items: center;
@@ -87,7 +102,7 @@
             border-bottom: none;
         }
         .resource-item:hover {
-            background-color: #f8f9fa;
+            background-color: rgba(241, 196, 15, 0.1);
             transform: translateX(5px);
         }
         .resource-item a {
@@ -118,12 +133,38 @@
             color: #7f8c8d;
             margin-top: 0.25rem;
         }
+        .dark-mode-btn {
+            position: fixed;
+            bottom: 1rem;
+            left: 1rem;
+            background-color: var(--primary-yellow);
+            color: var(--primary-blue);
+            border: none;
+            border-radius: 50%;
+            width: 50px;
+            height: 50px;
+            font-size: 1.5rem;
+            cursor: pointer;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+            transition: all 0.3s ease;
+            z-index: 1000;
+        }
+        .dark-mode-btn:hover {
+            transform: scale(1.1);
+        }
         footer {
             background-color: var(--primary-blue);
             color: #fff;
             text-align: center;
             padding: 1.5rem;
             margin-top: 3rem;
+        }
+        footer a {
+            color: var(--primary-yellow);
+            text-decoration: none;
+        }
+        footer a:hover {
+            text-decoration: underline;
         }
         @media (max-width: 768px) {
             .container {
@@ -133,6 +174,7 @@
                 font-size: 2rem;
             }
             .nav-links {
+                top: 2rem;
                 flex-direction: column;
                 gap: 0.5rem;
             }
@@ -147,8 +189,8 @@
 <body>
     <header>
         <div class="nav-links">
-            <a href="../../">← Home</a>
-            <a href="../">← Resources</a>
+            <a href="../../" title="Home">🏠</a>
+            <a href="../" title="Resources">⬅️</a>
         </div>
         <h1>FY-Sem2-IOTA-Linux</h1>
         <p>Linux and IoT Resources</p>
@@ -170,9 +212,26 @@
             </ul>
         </div>
     </div>
+    <button class="dark-mode-btn" id="darkModeBtn">🌙</button>
     <footer>
-        <p>&copy; 2023 CWITFY. All rights reserved.</p>
+        <p>&copy; 2025 CWITFY. <a href="https://github.com/paris-29/CWITFY/">GitHub</a></p>
     </footer>
+    <script>
+        const darkModeBtn = document.getElementById('darkModeBtn');
+        const body = document.body;
+
+        // Check for saved theme preference or default to light mode
+        const currentTheme = localStorage.getItem('theme') || 'light';
+        body.setAttribute('data-theme', currentTheme);
+        darkModeBtn.textContent = currentTheme === 'dark' ? '☀️' : '🌙';
+
+        darkModeBtn.addEventListener('click', () => {
+            const theme = body.getAttribute('data-theme') === 'dark' ? 'light' : 'dark';
+            body.setAttribute('data-theme', theme);
+            localStorage.setItem('theme', theme);
+            darkModeBtn.textContent = theme === 'dark' ? '☀️' : '🌙';
+        });
+    </script>
 </body>
 </html></content>
 </xai:function_call name="write">
