Added UI Features

--- a/Resources/FY-SEM2-IOT-A.Maths/index.html
+++ b/Resources/FY-SEM2-IOT-A.Maths/index.html
@@ -171,6 +171,7 @@
         </div>
         <h1>FY-SEM2-IOT-A.Maths</h1>
         <p>Applied Mathematics Resources</p>
+        <button class="dark-mode-btn" id="darkModeBtn">🌙</button>
     </header>
     <div class="container">
         <div class="section">
@@ -181,9 +182,8 @@
             </div>
         </div>
     </div>
-    <button class="dark-mode-btn" id="darkModeBtn">🌙</button>
     <footer>
-        <p>&copy; 2025 CWITFY. <a href="https://github.com/paris-29/CWITFY/">GitHub</a></p>
+        <p>&copy; 2025 CWITFY. <a href="https://github.com/paris-29/CWITFY/">🐙 GitHub</a></p>
     </footer>
     <script>
         const darkModeBtn = document.getElementById('darkModeBtn');
