--- a/Resources/FY-SEM2-PIC (IOT)/index.html
+++ b/Resources/FY-SEM2-PIC (IOT)/index.html
@@ -45,6 +45,25 @@
             margin: 0.5rem 0 0;
             font-size: 1.1rem;
         }
+        .dark-mode-btn {
+            position: absolute;
+            top: 1rem;
+            right: 1rem;
+            background-color: var(--primary-yellow);
+            color: var(--primary-blue);
+            border: none;
+            border-radius: 50%;
+            width: 50px;
+            height: 50px;
+            font-size: 1.5rem;
+            cursor: pointer;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+            transition: all 0.3s ease;
+            z-index: 1000;
+        }
+        .dark-mode-btn:hover {
+            transform: scale(1.1);
+        }
         .nav-links {
             position: absolute;
             top: 1rem;
@@ -115,25 +134,7 @@
             font-style: italic;
             padding: 2rem;
         }
-        .dark-mode-btn {
-            position: fixed;
-            bottom: 1rem;
-            left: 1rem;
-            background-color: var(--primary-yellow);
-            color: var(--primary-blue);
-            border: none;
-            border-radius: 50%;
-            width: 50px;
-            height: 50px;
-            font-size: 1.5rem;
-            cursor: pointer;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.2);
-            transition: all 0.3s ease;
-            z-index: 1000;
-        }
-        .dark-mode-btn:hover {
-            transform: scale(1.1);
-        }
+
         footer {
             background-color: var(--primary-blue);
             color: #fff;
@@ -171,6 +172,7 @@
         </div>
         <h1>FY-SEM2-PIC (IOT)</h1>
         <p>PIC Microcontroller and IoT Resources</p>
+        <button class="dark-mode-btn" id="darkModeBtn">🌙</button>
     </header>
     <div class="container">
         <div class="section">
@@ -181,9 +183,8 @@
             </div>
         </div>
     </div>
-    <button class="dark-mode-btn" id="darkModeBtn">🌙</button>
     <footer>
-        <p>&copy; 2025 CWITFY. <a href="https://github.com/paris-29/CWITFY/">GitHub</a></p>
+        <p>&copy; 2025 CWITFY. <a href="https://github.com/paris-29/CWITFY/">🐙 GitHub</a></p>
     </footer>
     <script>
         const darkModeBtn = document.getElementById('darkModeBtn');
