--- a/index.html
+++ b/index.html
@@ -12,22 +12,36 @@
         :root {
             --primary-blue: #3498db;
             --primary-yellow: #f1c40f;
+            --bg-color: #f5f5f5;
+            --text-color: #333;
+            --header-bg: var(--primary-blue);
+            --section-bg: #fff;
+            --border-color: #ecf0f1;
+        }
+        [data-theme="dark"] {
+            --bg-color: #1a1a1a;
+            --text-color: #e0e0e0;
+            --header-bg: #2c3e50;
+            --section-bg: #2c2c2c;
+            --border-color: #444;
         }
         body {
             font-family: 'Onest', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f5f5f5;
-            color: #333;
+            background-color: var(--bg-color);
+            color: var(--text-color);
             line-height: 1.6;
+            transition: background-color 0.3s, color 0.3s;
         }
         header {
-            background-color: var(--primary-blue);
+            background-color: var(--header-bg);
             color: #fff;
             display: flex;
             justify-content: space-between;
             align-items: center;
             padding: 2rem 1rem;
+            position: relative;
         }
         header h1 {
             margin: 0;
@@ -62,10 +76,11 @@
         }
         .section {
             margin: 3rem 0;
-            background-color: #fff;
+            background-color: var(--section-bg);
             padding: 2rem;
             border-radius: 8px;
             box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            transition: background-color 0.3s;
         }
         .section h2 {
             margin-top: 0;
@@ -110,10 +125,11 @@
         }
         .recent-item {
             padding: 1rem;
-            border-bottom: 1px solid #ecf0f1;
+            border-bottom: 1px solid var(--border-color);
             display: flex;
             justify-content: space-between;
             align-items: center;
+            transition: border-color 0.3s;
         }
         .recent-item:last-child {
             border-bottom: none;
@@ -133,6 +149,32 @@
             text-align: center;
             padding: 1.5rem;
             margin-top: 3rem;
+        }
+        footer a {
+            color: var(--primary-yellow);
+            text-decoration: none;
+        }
+        footer a:hover {
+            text-decoration: underline;
+        }
+        .dark-mode-btn {
+            position: absolute;
+            top: 1rem;
+            right: 1rem;
+            background-color: var(--primary-yellow);
+            color: var(--primary-blue);
+            border: none;
+            border-radius: 50%;
+            width: 50px;
+            height: 50px;
+            font-size: 1.5rem;
+            cursor: pointer;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+            transition: all 0.3s ease;
+            z-index: 1000;
+        }
+        .dark-mode-btn:hover {
+            transform: scale(1.1);
         }
         @media (max-width: 768px) {
             .container {
@@ -154,6 +196,7 @@
             <h1>CWITFY Resources</h1>
         </div>
         <p>Your resource hub for FY-SEM2</p>
+        <button class="dark-mode-btn" id="darkModeBtn">🌙</button>
     </header>
     <div class="container">
         <div class="search-container">
@@ -185,12 +228,26 @@
         </div>
     </div>
     <footer>
-        <p>&copy; 2023 CWITFY. All rights reserved.</p>
+        <p>&copy; 2023 CWITFY. <a href="https://github.com/paris-29/CWITFY/">🐙 GitHub</a></p>
     </footer>
     <script>
         const searchInput = document.getElementById('search');
         const resourceList = document.getElementById('resourceList');
         const items = resourceList.getElementsByClassName('resource-item');
+        const darkModeBtn = document.getElementById('darkModeBtn');
+        const body = document.body;
+
+        // Check for saved theme preference or default to light mode
+        const currentTheme = localStorage.getItem('theme') || 'light';
+        body.setAttribute('data-theme', currentTheme);
+        darkModeBtn.textContent = currentTheme === 'dark' ? '☀️' : '🌙';
+
+        darkModeBtn.addEventListener('click', () => {
+            const theme = body.getAttribute('data-theme') === 'dark' ? 'light' : 'dark';
+            body.setAttribute('data-theme', theme);
+            localStorage.setItem('theme', theme);
+            darkModeBtn.textContent = theme === 'dark' ? '☀️' : '🌙';
+        });
 
         searchInput.addEventListener('input', function() {
             const query = this.value.toLowerCase();
