--- a/Notes/index.html
+++ b/Notes/index.html
@@ -3,39 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resources Directory</title>
+    <title>Notes Directory</title>
     <link rel="stylesheet" href="../Styles.css">
 </head>
 <body>
     <header>
         <a href="../" class="back-home">← Back to Home</a>
-        <h1>Resources</h1>
+        <h1>Notes</h1>
         <button class="dark-mode-btn" id="darkModeBtn"><i data-lucide="moon"></i></button>
     </header>
     <div class="container">
         <div class="search-container">
-            <input type="text" id="search" placeholder="Search resources...">
+            <input type="text" id="search" placeholder="Search notes...">
         </div>
         <div class="section">
-            <h2>All Resources</h2>
-             <div class="resources" id="resourceList">
-                 <div class="resource-item" data-name="FY Sem2 Linux (IOT)">
-                     <a href="FY-Sem2-IOTA-Linux/">FY-Sem2-Linux (IOT)</a>
-                 </div>
-                 <div class="resource-item" data-name="FY SEM2 IOT PIC">
-                     <a href="FY-SEM2-PIC (IOT)/">FY SEM 2 IOT - PIC</a>
-                 </div>
-                 <div class="resource-item" data-name="FY SEM2 IOT BEEE">
-                     <a href="FY-SEM2-IOT-BEEE /">FY SEM2 IOT BEEE</a>
-                 </div>
-                 <div class="resource-item" data-name="FY Sem2 IOT A.Maths">
-                     <a href="FY-SEM2-IOT-A.Maths/">FY SEM2 IOT A.Maths</a>
-                 </div>
-             </div>
+            <h2>All Notes</h2>
+            <div class="resources" id="resourceList">
+                <div class="resource-item" data-name="FY Sem2 Linux (IOT)">
+                    <a href="FY-Sem2-IOTA-Linux/">FY-Sem2-Linux (IOT)</a>
+                </div>
+                <div class="resource-item" data-name="FY SEM2 IOT PIC">
+                    <a href="FY-SEM2-PIC (IOT)/">FY SEM 2 IOT - PIC</a>
+                </div>
+                <div class="resource-item" data-name="FY SEM2 IOT BEEE">
+                    <a href="FY-SEM2-IOT-BEEE /">FY SEM2 IOT BEEE</a>
+                </div>
+                <div class="resource-item" data-name="FY Sem2 IOT A.Maths">
+                    <a href="FY-SEM2-IOT-A.Maths/">FY SEM2 IOT A.Maths</a>
+                </div>
+            </div>
         </div>
     </div>
     <footer>
-        <p>&copy; 2023 CWITFY. <a href="https://github.com/paris-29/CWITFY/">🐙 GitHub</a></p>
+        <p>&copy; 2025 CWITFY. <a href="https://github.com/paris-29/CWITFY/">🐙 GitHub</a></p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/lucide/dist/umd/lucide.js"></script>
     <script>
@@ -73,6 +73,4 @@
         });
     </script>
 </body>
-</html></content>
-</xai:function_call name="write">
-<parameter name="filePath">Resources/FY-Sem2-IOTA-Linux/index.html
+</html>
