--- a/Syllabus/FY-SEM2-IOT-BEEE /index.html
+++ b/Syllabus/FY-SEM2-IOT-BEEE /index.html
@@ -3,24 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FY-SEM2-IOT-BEEE Directory</title>
+    <title>FY-SEM2-IOT-BEEE Syllabus</title>
     <link rel="stylesheet" href="../../Styles.css">
 </head>
 <body>
     <header>
         <div class="nav-links">
             <a href="../../" title="Home"><i data-lucide="home"></i></a>
-            <a href="../" title="Resources"><i data-lucide="arrow-left"></i></a>
+            <a href="../" title="Syllabus"><i data-lucide="arrow-left"></i></a>
         </div>
         <h1>FY-SEM2-IOT-BEEE</h1>
         <button class="dark-mode-btn" id="darkModeBtn"><i data-lucide="moon"></i></button>
     </header>
     <div class="container">
         <div class="section">
-            <h2>Available Resources</h2>
+            <h2>Available Syllabus</h2>
             <div class="coming-soon">
-                <p>⚡ Resources will be added soon.</p>
-                <p>Check back later for lecture notes, assignments, and study materials.</p>
+                <p>⚡ Syllabus will be added soon.</p>
+                <p>Check back later for course syllabus and outlines.</p>
             </div>
         </div>
     </div>
@@ -48,6 +48,4 @@
         });
     </script>
 </body>
-</html></content>
-</xai:function_call name="write">
-<parameter name="filePath">Resources/FY-SEM2-IOT-A.Maths/index.html
+</html>
