Added UI Features

--- a/Resources/FY-Sem2-IOTA-Linux/index.html
+++ b/Resources/FY-Sem2-IOTA-Linux/index.html
@@ -35,7 +35,7 @@
     <footer>
         <p>&copy; 2025 CWITFY. <a href="https://github.com/paris-29/CWITFY/">🐙 GitHub</a></p>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/lucide/dist/umd/lucide.js"></script>
+    <script src="https://unpkg.com/lucide@latest"></script>
     <script>
         const darkModeBtn = document.getElementById('darkModeBtn');
         const themeIcon = document.querySelector('#darkModeBtn i');
