Added UI Features

--- a/Notes/index.html
+++ b/Notes/index.html
@@ -37,7 +37,7 @@
     <footer>
         <p>&copy; 2025 CWITFY. <a href="https://github.com/paris-29/CWITFY/">🐙 GitHub</a></p>
     </footer>
-    <script src="https://unpkg.com/lucide@latest"></script>
+    <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.js"></script>
     <script>
         const searchInput = document.getElementById('search');
         const resourceList = document.getElementById('resourceList');
