--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     <footer>
         <p>&copy; 2023 CWITFY. <a href="https://github.com/paris-29/CWITFY/">🐙 GitHub</a></p>
     </footer>
-    <script src="https://unpkg.com/lucide@latest"></script>
+    <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.js/dist/umd/lucide.js"></script>
     <script>
         const searchInput = document.getElementById('search');
         const recentList = document.getElementById('recentList');
